--- a/event-management.client/package.json
+++ b/event-management.client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.21.3",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
