--- a/EventManagement.Application/EventManagement.Application.csproj
+++ b/EventManagement.Application/EventManagement.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventManagement.Core\EventManagement.Core.csproj" />
+    <ProjectReference Include="..\EventManagement.DataAccess\EventManagement.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
