Добавлена возможность добавлять изображения к событиям

--- a/EventManagement.API/EventManagement.API.csproj
+++ b/EventManagement.API/EventManagement.API.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\EventManagement.DataAccess\EventManagement.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
