--- a/event-management.client/package.json
+++ b/event-management.client/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "antd": "^5.21.3",
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "moment": "^2.30.1",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
