Исправлен компонент меню, новая база для событий

--- a/EventManagement.API/appsettings.Development.json
+++ b/EventManagement.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "EventManagementDbContext": "User ID=root;Password=Bm8*T3C&ZKvX;Host=eventify.ddns.net;Port=5432;Database=eventsdb;"
+    "EventManagementDbContext": "User ID=root;Password=Bm8*T3C&ZKvX;Host=eventify.ddns.net;Port=5432;Database=eventifydb;"
   }
 }
